--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,7 +64,7 @@
 }
 #home::before {
   content: "";
-  background: url("..../img/bg.jpg") no-repeat center center/cover;
+  background: url("../img/bg.jpg") no-repeat center center/cover;
   position: absolute;
   height: 533px;
   width: 100%;
@@ -109,7 +109,7 @@
 }
 #client-section::before {
   content: "";
-  background: url("..../img/nature-3106216_1280.jpg") no-repeat center
+  background: url("../img/nature-3106216_1280.jpg") no-repeat center
     center/cover;
   position: absolute;
   height: 100%;
@@ -135,7 +135,7 @@
 }
 #contact::before {
   content: "";
-  background: url("..../img/contact-us-2993000_1280.jpg") no-repeat center
+  background: url("../img/contact-us-2993000_1280.jpg") no-repeat center
     center/cover;
   position: absolute;
   height: 100%;
